--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,89 +1,49 @@
 name: Build Executables
 
 on:
-  push:
-    branches: [ main, master ]
-    tags: [ 'v*' ]
-  pull_request:
-    branches: [ main, master ]
   workflow_dispatch:
+  push:
+    branches: [ main ]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [windows-latest, macos-latest]
-        include:
-          - os: windows-latest
-            executable_name: Topini_App.exe
-            asset_name: Topini_App_Windows.exe
-          - os: macos-latest
-            executable_name: Topini_App
-            asset_name: Topini_App_macOS
-
-    runs-on: ${{ matrix.os }}
-
+  build-windows:
+    runs-on: windows-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-
-    - name: Install system dependencies (macOS)
-      if: matrix.os == 'macos-latest'
-      run: |
-        brew install python-tk
-
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller
-
+        pip install PySide6 opencv-python mediapipe numpy pyinstaller
     - name: Build executable
       run: |
-        pyinstaller app.spec
-
-    - name: Rename executable (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        move "dist\Topini_App.exe" "dist\${{ matrix.asset_name }}"
-
-    - name: Rename executable (macOS)
-      if: matrix.os == 'macos-latest'
-      run: |
-        mv "dist/Topini_App" "dist/${{ matrix.asset_name }}"
-
-    - name: Upload executable
+        pyinstaller --onefile --windowed --name Topini_App --add-data "assets;assets" src/main.py
+    - name: Upload Windows executable
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.asset_name }}
-        path: dist/${{ matrix.asset_name }}
+        name: Topini_App_Windows
+        path: dist/Topini_App.exe
 
-  release:
-    if: startsWith(github.ref, 'refs/tags/v')
-    needs: build
-    runs-on: ubuntu-latest
+  build-macos:
+    runs-on: macos-latest
     steps:
-    - name: Download Windows executable
-      uses: actions/download-artifact@v4
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        name: Topini_App_Windows.exe
-
-    - name: Download macOS executable
-      uses: actions/download-artifact@v4
+        python-version: '3.11'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install PySide6 opencv-python mediapipe numpy pyinstaller
+    - name: Build executable
+      run: |
+        pyinstaller --onefile --windowed --name Topini_App --add-data "assets:assets" src/main.py
+    - name: Upload macOS executable
+      uses: actions/upload-artifact@v4
       with:
         name: Topini_App_macOS
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          Topini_App_Windows.exe
-          Topini_App_macOS
-        generate_release_notes: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        path: dist/Topini_App
