--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
         name: Topini_App_Windows
         path: dist/Topini_App.exe
 
-  build-macos:
-    runs-on: macos-latest
+  build-macos-intel:
+    runs-on: macos-12
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
@@ -39,11 +39,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install PySide6 opencv-python mediapipe numpy pyinstaller
-    - name: Build executable
+    - name: Force Intel architecture
       run: |
-        pyinstaller --onefile --windowed --name Topini_App --add-data "assets:assets" src/main.py
-    - name: Upload macOS executable
+        arch -x86_64 pyinstaller --onefile --windowed --name Topini_App_Intel --add-data "assets:assets" src/main.py
+    - name: Upload macOS Intel executable
       uses: actions/upload-artifact@v4
       with:
-        name: Topini_App_macOS
-        path: dist/Topini_App
+        name: Topini_App_macOS_Intel
+        path: dist/Topini_App_Intel
